[[bin]]
name = "playback_mouse"
path = "src/playback_mouse.rs"

[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-analyzer = "1.5.0"
sdl2 = "0.35.2"
rand = "0.8.5"
rodio = "0.17.1"
hound = "3.5.1"
cpal = "0.2.12"
plotly = "0.8.4"
