[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-analyzer = "1.5.0"
sdl2 = "0.35.2"
rand = "0.8.5"
rodio = "0.17.1"
hound = "3.5.1"
plotly = "0.8.4"
cpal = "0.15.2"
anyhow = "1.0"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }
ringbuffer = "0.15.0"
